feat: update toggleJournalTag and updateJournal
